# docs/swagger.yaml
@@ -575,6 +575,21 @@ definitions:
       isActive:
         type: boolean
     type: object
+  restaurants.AdminReviewDTO:
+    properties:
+      comment:
+        type: string
+      createdAt:
+        type: string
+      id:
+        type: string
+      rating:
+        type: integer
+      userEmail:
+        type: string
+      userName:
+        type: string
+    type: object
   restaurants.CreateRestaurantRequest:
     properties:
       address:
@@ -841,6 +856,27 @@ paths:
             additionalProperties:
               type: string
             type: object
+      security:
+      - ApiKeyAuth: []
+      tags:
+      - Admin
+  /admin/restaurants/{id}/reviews:
+    get:
+      parameters:
+      - description: Restaurant ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/restaurants.AdminReviewDTO'
+            type: array
       security:
       - ApiKeyAuth: []
       tags:
@@ -1953,6 +1989,15 @@ paths:
             additionalProperties:
               type: string
             type: object
+      security:
+      - ApiKeyAuth: []
+      tags:
+      - Partner
+  /partner/reviews:
+    get:
+      produces:
+      - application/json
+      responses: {}
       security:
       - ApiKeyAuth: []
       tags:
