# internal/restaurants/dto.go
@@ -69,6 +69,15 @@ type ReviewDTO struct {
 	CreatedAt time.Time `json:"createdAt"`
 }
 
+type AdminReviewDTO struct {
+	ID        string    `json:"id"`
+	Rating    int       `json:"rating"`
+	Comment   string    `json:"comment"`
+	UserName  string    `json:"userName"`
+	UserEmail string    `json:"userEmail"`
+	CreatedAt time.Time `json:"createdAt"`
+}
+
 type RestaurantReviewsResponse struct {
 	Data       []ReviewDTO `json:"data"`
 	Pagination Pagination  `json:"pagination"`
